@@ -1,3 +1,15 @@
+2015-01-01  kitone  <kitone@gna.org>
+
+	* plugins/actions/plaintext/plaintext.cc:
+	Fix bug #22550 : Default saving mode defaults to plain text after importing a .txt script
+
+2015-01-01  kitone  <kitone@gna.org>
+
+	* src/gui/textviewcell.cc:
+	* src/gui/textviewcell.h:
+	* src/subtitleview.cc:
+	Fix bug #22857, bug #23018 patch from Philip Rinn and oi_wtf.
+
 2014-08-31  kitone  <kitone@gna.org>
 
 	* plugins/actions/findandreplace/findandreplace.cc:
